simple/test/features/errors/semantic/e1070_invalid_default_variant.spl
# E1070: Invalid Default Variant

Feature: E1070 - Invalid Use of Default Variant
  As a Simple compiler
  I want to detect invalid uses of #[default] on enum variants
  So that only one variant is marked as default

  Background:
    Given I have the Simple compiler

  Scenario: Multiple default variants
    When I compile:
      '''
      enum Status:
        #[default]
        Pending
        #[default]  # Error: already has default
        Active
        Completed
      '''
    Then I should see error E1070 at line 4
    And the error message should be "invalid use of `#[default]` on variant"
    And the label should indicate "invalid default"
    And the help should suggest "`#[default]` can only be used on one variant per enum"

  Scenario: Valid default variant
    When I compile:
      '''
      enum Status:
        #[default]
        Pending
        Active
        Completed
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      enum Status:
        #[default]
        Pending
        #[default]
        Active
      '''
    Then I should see error E1070
    And the error message should contain "잘못된 기본 변형"
